@@ -9,7 +9,7 @@
 
 	dim shared as FB_RTL_PROCDEF funcdata( 0 to 3 ) = _
 	{ _
-		/' function fb_IsTypeOf( byref obj as any, byref rtti as $fb_RTTI ) as long '/ _
+		/' function fb_IsTypeOf( byref obj as any, byref rtti as fb_RTTI$ ) as long '/ _
 		( _
 			@FB_RTL_ISTYPEOF, NULL, _
 			FB_DATATYPE_LONG, FB_FUNCMODE_FBCALL, _
